# org-roam-exts

./: README.org  org-roam-buffer-exts.el  org-roam-category.el  org-roam-exts-utils.el  org-roam-exts.el  org-roam-links.el  org-roam-sem.el  org-roam-sidekick.el
org-roam-sem/: pyproject.toml
org-roam-sem/src/org_roam_sem/: cli.py  featurize.py  prep.py  serve.py
org-roam-sem/tests/: test_featurize.py
