[project]
name = "org-roam-sem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "docopt>=0.6.2",
    "flask>=3.0.3",
    "loguru>=0.7.2",
    "orgparse>=0.4.20231004",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "sentence-transformers[onnx]>=3.2.1",
    "tqdm>=4.67.0",
]

    
[project.scripts]
org-roam-sem = "org_roam_sem:cli.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
